2008-07-07 Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config.c, pef-config/src/pef-config.c,
	ipmi-sensors-config/src/ipmi-sensors-config.c: Fix error message
	output corner cases.
	
2008-06-21 Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_check.c
	(ipmipower_check_requester_sequence_number): Remove left over
	debugging.
	
2008-06-16 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Fix manpage
	output text ordering.

2008-06-04  Albert Chu <chu11@llnl.gov>
	
	* configure.ac, NEWS: Update for release.

	* Tagged Release-0_6_4.

2008-06-04  Albert Chu <chu11@llnl.gov>
 
	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Special case completion code
	IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT as an
 	"ok" error.

2008-06-04  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c: Fix backport
	bug.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(run_cmd_args): If receive parameters error on
	ipmi_monitoring_bitmask_string() call, assume bogus bitmask
	returned from remote machine.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Fix compiler warning.
	Fix error return bug.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmimonitoring/ipmimonitoring.c
	(run_cmd_args): If receive parameters error on
	ipmi_monitoring_bitmask_string() call, assume bogus bitmask
	returned from remote machine.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-reading.c: Fix compiler warning.
	Fix error return bug.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/cmds/ipmi-sensor-cmds.c: Make "sensor_state",
	"sensor_state1", "sensor_state2", and "reserved2".

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c:
	Adjust for change.

	* ipmi-sensors/src/ipmi-sensors-reading.c: Adjust for change.
