@@ -1,6 +1,7 @@
 0.6.5 - XX/XX/XX
 ----------------
 o Fix several invalid error outputs.
+o Fix several minor bugs.
 o Minor documentation cleanup.
 
 0.6.4 - 06/04/08
